- Fix database data loss on docker restart